# vexl-language

./: .gitignore  AGENTS.md  BOOTSTRAPPING.md  BOT.txt  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPMENT.md  LICENSE  LINKING.md  OPTIBEST_COMPLETION_DECLARATION.md  OPTIBEST_VEXL_IMPLEMENTATION_PLAN.md  README.md  README.md.bak  SECURITY.md  demo-compiler.sh  demo.sh  final-report.sh  function_signature_demo.vexl  hello.vexl  quickstart.sh  runtime_function_demo.vexl  safe_example.vexl  simple_function_demo.vexl  test_basic.vexl  test_executable  test_math.vexl  test_simple.vexl  test_string.vexl  usage-examples.sh  vexl premise.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
DOCUMENTATION/: OPTIBEST MAX PURPOSE MIN.txt  README.md  vext.txt
DOCUMENTATION/advanced/: gpu-computing.md  performance.md
DOCUMENTATION/examples/: beginner-examples.md
DOCUMENTATION/getting-started/: basic-concepts.md  first-program.md  installation.md  tutorial.md
DOCUMENTATION/language-guide/: syntax-reference.md  type-system.md  vector-operations.md
DOCUMENTATION/reference/: built-in-functions.md  complete-syntax.md  vector-formats.md
crates/vexl-codegen/: Cargo.toml
crates/vexl-codegen/src/: function_registry.rs  jit.rs  lib.rs  llvm.rs  symbol_resolver.rs
crates/vexl-codegen/tests/: jit_execution_tests.rs
crates/vexl-core/: Cargo.toml
crates/vexl-core/src/: effect.rs  generator.rs  lib.rs  memory.rs  parallel.rs  vector.rs
crates/vexl-driver/: Cargo.toml
crates/vexl-driver/src/: main.rs  package_commands.rs  repl.rs
crates/vexl-gpu/: Cargo.toml
crates/vexl-gpu/benches/: performance_benchmarks.rs
crates/vexl-gpu/src/: backend.rs  cuda.rs  hardware_validation.rs  lib.rs  opencl.rs  performance_benchmarks.rs  safety_monitor.rs  vector_ops.rs  vulkan.rs
crates/vexl-gpu/tests/: comprehensive_hardware_test.rs
crates/vexl-ir/: Cargo.toml
crates/vexl-ir/src/: lib.rs  lower.rs  optimize.rs
crates/vexl-ir/src/passes/: inline.rs  loop_opt.rs  memory_layout.rs  mod.rs  vectorize.rs
crates/vexl-lsp/: Cargo.toml
crates/vexl-lsp/src/: analysis.rs  main.rs  semantic.rs  server.rs
crates/vexl-lsp/src/features/: completion.rs  diagnostics.rs  extensions.rs  find_references.rs  formatting.rs  goto_definition.rs  hover.rs  mod.rs  rename.rs
crates/vexl-pkg/: Cargo.toml
crates/vexl-pkg/src/: lib.rs  manifest.rs  package.rs  registry.rs  resolver.rs  security.rs
crates/vexl-pkg/tests/: pkg_test.rs
crates/vexl-runtime/: Cargo.toml
crates/vexl-runtime/src/: ## __What Needs to Be Added for HRM-VEXL.md  cache.rs  context.rs  ffi.rs  ffi_bridge.rs  gc.rs  generator.rs  interpreter.rs  lib.rs  parallel_ops.rs  scheduler.rs  vector.rs  vpu.rs
crates/vexl-serialize/: Cargo.toml
crates/vexl-serialize/src/: archive.rs  binary.rs  graphics.rs  lib.rs  stream.rs  text.rs
crates/vexl-stdlib/: Cargo.toml
crates/vexl-stdlib/src/: collections.rs  io.rs  lib.rs  linalg.rs  math.rs  stats.rs
crates/vexl-storage/: Cargo.toml
crates/vexl-storage/src/: lib.rs
crates/vexl-syntax/: Cargo.toml
crates/vexl-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/vexl-types/: Cargo.toml
crates/vexl-types/src/: dimensional.rs  effect_check.rs  inference.rs  lib.rs
examples/: 01_arithmetic.vexl  02_let_bindings.vexl  03_vectors.vexl  04_ranges.vexl  05_lambdas.vexl  06_pipelines.vexl  APPLICATIONS.md  README.md  arithmetic_demo.vexl  data_analysis.vexl  image_processing.vexl  linear_algebra.vexl  neural_network.vexl  numerical_algorithms.vexl  parser_demo.vexl  program.vexl  runtime_test.vexl  safe_test.vexl  simple.vexl  test_llvm_ir.rs  vector_add.vexl  vector_demo.vexl  vector_test.vexl  vexl1.md  what_works_now.vexl  working_features.vexl
mcp/optibest-agentic-mcp/: README.md  demo.js  mcp-config.json  package-lock.json  package.json  server.js  test.js
stdlib/: io.vexl  linalg.vexl  math.vexl  random.vexl  stats.vexl  string.vexl  time.vexl  vector.vexl
tests/: integration_test.rs
tests/framework/: Cargo.toml
tests/framework/src/: lib.rs
