[workspace]
resolver = "2"
members = [
    "crates/vexl-stdlib",
    "crates/vexl-gpu",
    "crates/vexl-core",
    "crates/vexl-syntax",
    "crates/vexl-types",
    "crates/vexl-ir",
    "crates/vexl-codegen",
    "crates/vexl-runtime",
    "crates/vexl-driver",
    "crates/vexl-lsp",
    "crates/vexl-pkg",
    "crates/vexl-serialize",
    "crates/vexl-storage",
    "tests/framework",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VEXL Team <vexl@ttx89.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ttx89-dev/vexl-language"
homepage = "https://vexl.dev"
documentation = "https://docs.vexl.dev"
description = "High-performance programmable vector language - everything is a vector"
keywords = ["language", "vector", "parallel", "high-performance", "gpu"]
categories = ["compilers", "science", "mathematics"]

[workspace.features]
default = ["gpu"]
gpu = ["vexl-gpu/default"]
cuda = ["vexl-gpu/cuda"]
opencl = ["vexl-gpu/opencl"]
vulkan = ["vexl-gpu/vulkan"]

[workspace.dependencies]
# Core dependencies
logos = "0.14"
chumsky = "0.9"
inkwell = { version = "0.4", features = ["llvm14-0", "target-x86", "target-aarch64"], default-features = false }
rayon = "1.10"
crossbeam-deque = "0.8"

# Runtime dependencies
parking_lot = "0.12"
dashmap = "6.0"

# CLI/REPL dependencies
rustyline = "14.0"
clap = { version = "4.5", features = ["derive"] }

# LSP dependencies
tower-lsp = "0.20"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing dependencies
proptest = "1.5"
quickcheck = "1.0"

# GPU dependencies
cudarc = { version = "0.12" }
opencl3 = { version = "0.9" }
ash = { version = "0.38" }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
