[package]
name = "vexl-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vexl-lsp"
path = "src/main.rs"

[dependencies]
vexl-syntax = { path = "../vexl-syntax" }
vexl-types = { path = "../vexl-types" }
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
