[package]
name = "vexl-pkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.8"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
semver = { version = "1.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
