[package]
name = "vexl-serialize"
version = "0.1.0"
edition = "2021"
description = "Universal vector serialization system for VEXL"
license = "MIT OR Apache-2.0"

[dependencies]
vexl-core = { path = "../vexl-core" }
crc32fast = "1.3"
lz4 = "1.24"
zstd = "0.13"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
